--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 *.lo
 *.o
 *.obj
+build
 
 # Precompiled Headers
 *.gch
@@ -26,3 +27,7 @@
 *.exe
 *.out
 *.app
+bin/*
+
+# Mac specific files
+.DS_Store
